# leetcode

./: Cargo.toml  README.md  Resources.md  TODO.md  template.rs  test.cmd
.cargo/: config.toml
.github/workflows/: ci.yaml
cli/: Cargo.toml
cli/src/: fetcher.rs  main.rs
cli/src/GraphQL/: allQuestions.graphql  getUserApiToken.graphql  hasOfficialSolution.graphql  questionData.graphql
leetcode/: Cargo.toml
leetcode/src/solution/: mod.rs  s0001_two_sum.rs  s0632_smallest_range_covering_elements_from_k_lists.rs  s0670_maximum_swap.rs  s0796_rotate_string.rs  s0875_koko_eating_bananas.rs  s0951_flip_equivalent_binary_trees.rs  s1106_parsing_a_boolean_expression.rs  s1233_remove_sub_folders_from_the_filesystem.rs  s1277_count_square_submatrices_with_all_ones.rs  s1298_maximum_candies_you_can_get_from_boxes.rs  s1388_pizza_with_3n_slices.rs  s1405_longest_happy_string.rs  s1545_find_kth_bit_in_nth_binary_string.rs  s1574_shortest_subarray_to_be_removed_to_make_array_sorted.rs  s1593_split_a_string_into_the_max_number_of_unique_substrings.rs  s1671_minimum_number_of_removals_to_make_mountain_array.rs  s1697_checking_existence_of_edge_length_limited_paths.rs  s1829_maximum_xor_for_each_query.rs  s1840_maximum_building_height.rs  s1879_minimum_xor_sum_of_two_arrays.rs  s1883_minimum_skips_to_arrive_at_meeting_on_time.rs  s1957_delete_characters_to_make_fancy_string.rs  s2044_count_number_of_maximum_bitwise_or_subsets.rs  s2064_minimized_maximum_of_products_distributed_to_any_store.rs  s2070_most_beautiful_item_for_each_query.rs  s2463_minimum_total_distance_traveled.rs  (+18 more)
(+4 files in other folders)
