[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.8", features = ["blocking", "json"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
futures = { version = "0.3.31", features = ["thread-pool"] }
surf = "2.3.2"
rand = "0.8.5"
regex = "1.11.0"
